# gl_play

./: .gitignore  .gitmodules  Blob.cpp  Blob.hpp  CMakeLists.txt  Definitions.cpp  Definitions.h  Definitions.hpp  Flame.cpp  Flame.hpp  Hex.cpp  Hex.hpp  LineHatch.hpp  Material.cpp  Material.h  Material.hpp  Partition.cpp  Partition.hpp  Plotter.cpp  Plotter.hpp  Processing.cpp  Processing.h  Processing.hpp  ProcessingGL.cpp  ProcessingSVG.cpp  Random.cpp  Random.hpp  RandomCache.cpp  RandomCache.hpp  RenderTarget.cpp  RenderTarget.hpp  Streamline.cpp  Streamline.hpp  TODO.md  Texture.hpp  Triangulate.cpp  Triangulate.hpp  Window.cpp  Window.hpp  flowmap.cpp  (+12 more)
imgui_impl/: glfw_gl3.cpp  imconfig.h  main.cpp
proc/: Blob.cpp  Blob.hpp  Cellular.cpp  Cellular.hpp  DifferentialGrowth.cpp  DifferentialGrowth.hpp  Flame.cpp  SlimeMold.cpp  SlimeMold.hpp  Streamline.cpp  Streamline.hpp  Superformula.hpp  Triangulate.cpp  Triangulate.hpp  cached_flowmap.cpp  cached_flowmap.hpp  class Hatch {.txt  flameline.cpp  flameline.hpp  flowmap.cpp  flowmap.hpp  fuzzy_net.hpp  proc_map.cpp  proc_map.hpp
ref/: image.capnp.c++  image.capnp.h
ref/glad/include/glad/: glad.h
ref/glad/src/: glad.c
shaders/: basic.frag  basic.vert  flame.geom  particle.geom  particle.vert  textured.frag  two_tri.frag  two_tri.vert
